<resources>
    <string name="app_name">쉿! 주차번호판!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_scan">QR코드 스캔하기</string>
    <string name="menu_log">통화목록</string>
    <string name="menu_make">QR코드 생성하기</string>
    <string name="menu_title">공유</string>
    <string name="menu_send">내 QR코드 전송하기</string>
    <string name="menu_share">앱 공유하기</string>

    <string name="refresh">새로고침</string>

    <string name="share_qr">공유하기!</string>

    <string name="permission_denied">권한이 거부되었습니다.</string>


</resources>
