<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_scan_qr"
            android:title="@string/menu_scan" />
        <item
            android:id="@+id/nav_make"
            android:icon="@drawable/ic_create_qr"
            android:title="@string/menu_make" />
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_call_log"
            android:title="@string/menu_log" />
    </group>

    <item android:title="@string/menu_title">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
